--- a/vignettes/biblio.bib
+++ b/vignettes/biblio.bib
@@ -114,7 +114,6 @@ archivePrefix = {arXiv},
 arxivId = {arXiv:1511.04453v2},
 author = {Pilosof, Shai and Porter, Mason A and Pascual, Mercedes and K{\'{e}}fi, Sonia},
 OPTeprint = {arXiv:1511.04453v2},
-file = {:home/donnet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Pilosof et al. - 2016 - The Multilayer Nature of Ecological Networks.pdf:pdf},
 journal = {ArXiv},
 keywords = {Metacommunities,Multilayer networks,Multilevel networks,Multiplex networks,Network ecology,Network of networks,Temporal networks},
 title = {{The Multilayer Nature of Ecological Networks}},
@@ -349,9 +348,24 @@ title = {{Stochastic block models for multiplex networks: An application to a mu
 year = {2016}
 }
 
+@ARTICLE{Donnet,
+       author = {{Bar-Hen}, Avner and {Barbillon}, Pierre and {Donnet}, Sophie},
+        title = "{Block models for multipartite networks.Applications in ecology and ethnobiology}",
+      journal = {arXiv e-prints},
+     keywords = {Statistics - Methodology},
+         year = "2018",
+        month = "Jul",
+          eid = {arXiv:1807.10138},
+        pages = {arXiv:1807.10138},
+archivePrefix = {arXiv},
+       eprint = {1807.10138},
+ primaryClass = {stat.ME},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018arXiv180710138B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
- 
+
 
 
 @article{Lazega2008,
@@ -870,7 +884,7 @@ language={English}
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {community structure, fitness function, multipartite networks},
-} 
+}
 
 
 
@@ -905,7 +919,7 @@ title = {Statistical clustering of temporal networks through a dynamic stochasti
 journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
 volume = {79},
 number = {4},
-year = {2017}, 
+year = {2017},
 pages = {1119-1141},
 keywords = {Contact network, Dynamic random graph, Graph clustering, Stochastic block model, Variational expectation–maximization},
 OPTdoi = {10.1111/rssb.12200},
@@ -1060,7 +1074,7 @@ eprint = {/oup/backfile/content_public/journal/comnet/2/1/10.1093/comnet/cnt011/
  isbn = {038788145X, 9780387881454},
  edition = {1st},
  publisher = {Springer Publishing Company, Incorporated},
-} 
+}
 
 @article{almeida2008consistent,
   title={A consistent metric for nestedness analysis in ecological systems: reconciling concept and measurement},
