--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
 # GREMLIN
 
 <!-- badges: start -->
+[![R build status](https://github.com/Demiperimetre/GREMLIN/workflows/R-CMD-check/badge.svg)](https://github.com/Demiperimetre/GREMLIN/actions)
 <!-- badges: end -->
 
 The goal of GREMLIN is to perform statistical analysis of multipartite networks through a block model approach. 
