--- a/vignettes/EcologicalNetwork.Rmd
+++ b/vignettes/EcologicalNetwork.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Analysis of a mutualistic multipartite ecological network with GREMLIN"
+title: "Analysis of a mutualistic multipartite ecological network with GREMLINS"
 author: "Sophie Donnet, Pierre Barbillon"
 date: "`r Sys.Date()`"
 output: 
@@ -54,17 +54,17 @@ The 3 networks contain   $753$  observed interactions of which $55\%$ are   plan
 
 
 ```{r loading dataset, eval=TRUE}
-library(GREMLIN)
-data(MPEcoNetwork, package = "GREMLIN")
+library(GREMLINS)
+data(MPEcoNetwork, package = "GREMLINS")
 ls()
 names(MPEcoNetwork)
 ```
 
-As required by GREMLIN, our the global network has  to be encoded in separate matrices for each network (in our case the $3$ incidence matrices)
+As required by GREMLINS, our the global network has  to be encoded in separate matrices for each network (in our case the $3$ incidence matrices)
 So, here, our  3 networks are provided in 3 incidence matrices, the plants being in rows. *Note that the order of the individuals within the functional groups must be the same in all the matrices*.  
 
 ## Formatting the data
-We format the data to be able to use our R package GREMLIN i.e. we transform the matrices into an list containing *the matrix*, *its type* : `inc`   for incidence matrix,  `adj`    for adjacency symetric, and `diradj` for  non symetric (oriented) adjacency  matrix, the name of functional group in row and the name of functional group in column.   The three matrices are gathered in a list. 
+We format the data to be able to use our R package GREMLINS i.e. we transform the matrices into an list containing *the matrix*, *its type* : `inc`   for incidence matrix,  `adj`    for adjacency symetric, and `diradj` for  non symetric (oriented) adjacency  matrix, the name of functional group in row and the name of functional group in column.   The three matrices are gathered in a list. 
 
 To do so, we use de the function `defineNetwork`. 
 ```{r transform dataset,  eval=TRUE}
